# where_to_go

./: .gitignore  README.md  pyproject.toml
places/: admin.py  models.py  urls.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_alter_image_options_alter_image_number.py  0002_image.py  0003_pictures_alter_place_description_long_delete_image_and_more.py  0004_alter_pictures_place_alter_place_latitude_and_more.py  0005_rename_description_long_place_long_description_and_more.py  0006_picture_alter_place_latitude_and_more.py  0007_alter_picture_image.py
places/static/places/: moscow_legends.json
places/templates/: index.html
where_to_go/: settings.py  urls.py  views.py
