[tool.poetry]
name = "where-to-go"
version = "0.1.0"
description = ""
authors = ["valhallajazzy <valhallajazzy@mail.ru>"]
readme = "README.md"
packages = [{include = "where_to_go"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
jinja2 = "^3.1.2"
pillow = "^10.1.0"
django-admin-sortable2 = "^2.1.10"
django-tinymce = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
